Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Settings__c/Static_Code_Analysis_Settings__c.object-meta.xml
<CustomObject>
    <label>Static Code Analysis Settings</label>
    <nameField>
        <label>Static Code Analysis Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Static Code Analysis Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>