Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Settings__c/fields/Cloud_Organization__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Organization__c</fullName>
    <description>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</description>
    <inlineHelpText>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</inlineHelpText>
    <label>Cloud Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>