Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Settings__c/fields/CodeScan_URL__c.field-meta.xml
<CustomField>
    <fullName>CodeScan_URL__c</fullName>
    <label>CodeScan URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>