Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Settings__c/recordTypes/CodeScan.recordType-meta.xml
<RecordType>
    <fullName>CodeScan</fullName>
    <active>true</active>
    <description>Record Type for CodeScan integration. Requires CodeScan licensing.</description>
    <label>CodeScan</label>
</RecordType>