Dummy_Package_for_scratch_org/main/default/objects/Static_Code_Analysis_Settings__c/validationRules/CodeScan_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CodeScan_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>IF (ISPICKVAL( CodeScan_Version__c, &apos;Cloud&apos;),
            ISBLANK( Cloud_Organization__c ), 
            FALSE )</errorConditionFormula>
    <errorMessage>Review the following required fields:
Cloud Organization is required for Cloud Version.
SonarQube Token and URL are required for On-premise Version.</errorMessage>
</ValidationRule>